--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="job-wrapper clearfix">
         	<div class="experience-title">Senior Software Engineer </div> <!-- JOB TITLE  -->
           <div class="company-description">
-          	<p>I am leading the development of full stack web applications as part of the technology transformation initiative and working closely with customers to analyze, design, develop and implement software systems using agile principles.
+          	<p>Leading the development of full stack web applications as part of the technology transformation initiative and working closely with customers to analyze, design, develop and implement software systems using agile principles.
             <br>
             <span class="boldwhite">Technologies:</span> React, CSS, Java/Spring, Postgres SQL
             </p>  <!-- JOB DESCRIPTION  -->
@@ -74,7 +74,7 @@
          <div class="job-wrapper clearfix">
         	<div class="experience-title">Software Engineer</div> <!-- JOB TITLE  -->
           <div class="company-description">
-          	<p>I Developed Full stack web applications using the latest technologies in fast paced agile environment. 
+          	<p>Developed Full stack web applications using the latest technologies in fast paced agile environment. 
                 I was Awarded 2016 Q4 Division Recognition Award (DRA) in the Intel Information Technology (IT) Group.
                 <br>
             <span class="boldwhite">Technologies:</span> Angular, Typescript, C#, .Net, Node.js, SQL Server, MongoDb  
@@ -90,7 +90,7 @@
        <div class="job-wrapper clearfix">
           <div class="experience-title">Lecturer </div> <!-- JOB TITLE  -->
         <div class="company-description">
-            <p>I was the instructor for "Introduction to Computer Science" classes for multiple sections at Arizona State University </p>   <!-- JOB DESCRIPTION  -->
+            <p>Was the instructor for "Introduction to Computer Science" classes for multiple sections at Arizona State University </p>   <!-- JOB DESCRIPTION  -->
         </div>
       </div>
 
@@ -102,7 +102,7 @@
    <div class="job-wrapper clearfix">
       <div class="experience-title">Founder </div> <!-- JOB TITLE  -->
     <div class="company-description">
-        <p>I formed Evantrium LLC which specialized in web development for early stage Startups.
+        <p>Formed Evantrium LLC which specialized in web development for early stage Startups.
             <br>
             <span class="boldwhite">Technologies:</span> Aurelia.js, Node.js, Express.js, Sails.js, MongoDb
          </p>   <!-- JOB DESCRIPTION  -->
@@ -120,7 +120,7 @@
    <div class="job-wrapper clearfix">
       <div class="experience-title">PhD - Computer Science</div> <!-- JOB TITLE  -->
     <div class="company-description">
-        <p> My research is focused on predicting the likelihood of a patient developing cardiovascular disease within the next 10 years using machine learning</p>   <!-- JOB DESCRIPTION  -->
+        <p> Research is focused on predicting the likelihood of a patient developing cardiovascular disease within the next 10 years using machine learning</p>   <!-- JOB DESCRIPTION  -->
     </div>
   </div>
       
@@ -133,7 +133,7 @@
         <div class="experience-title">Master of Science - Computer Science </div> <!-- JOB TITLE  -->
       <div class="company-description">
           <p>
-            My Thesis Paper was accepted at World Wide Digital Health Conference in Montreal, Canada. I Presented my research at the conference and now it is adopted at Mayo Clinic, Phoenix to improve resuscitation outcomes. 
+            Thesis Paper was accepted at World Wide Digital Health Conference in Montreal, Canada. I Presented my research at the conference and now it is adopted at Mayo Clinic, Phoenix to improve resuscitation outcomes. 
            <br> Title of Paper: Development and Use of an iPad-Based Resuscitation Code-Blue Sheet for Improving Resuscitation Outcomes during Intensive Patient Care. 
             </p>   <!-- JOB DESCRIPTION  -->
       </div>
@@ -147,7 +147,7 @@
    <div class="job-wrapper clearfix">
       <div class="experience-title">Bachelor of Science - Computer Science </div> <!-- JOB TITLE  -->
     <div class="company-description">
-        <p>I graduated with Magna Cum Laude Honor </p>   <!-- JOB DESCRIPTION  -->
+        <p>Graduated with Magna Cum Laude (Distinction) </p>   <!-- JOB DESCRIPTION  -->
     </div>
   </div>
       
@@ -158,7 +158,8 @@
         	<ul>
         		<li class="skill-percentage">C# and .Net</li>
         		<li class="skill-percentage">Node.js and Express.js</li>
-        		<li class="skill-percentage">Java/Spring</li>
+                <li class="skill-percentage">Java/Spring</li>
+                <li class="skill-percentage">Python</li>
         		<li class="skill-percentage">SQL and MongoDb</li>
         		<li class="skill-percentage">React</li>
         		<li class="skill-percentage">Angular</li>
