added new job info

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
          <div class="clearfix"></div>
  </div>
       <div class="name-wrapper">
-        <h1>Wasif Bokhari</h1><!-- YOUR NAME AND LAST NAME  -->
-        <h3>Software Engineer</h3><!-- YOUR NAME AND LAST NAME  -->
+        <h1>Wasif Bokhari (PhD)</h1><!-- YOUR NAME AND LAST NAME  -->
+        <h3>Senior Machine Learing Engineer</h3><!-- YOUR NAME AND LAST NAME  -->
       </div>
       <div class="clearfix"></div>
       <div class="contact-info clearfix">
@@ -51,6 +51,21 @@
   		<h3 class="experience-title">Experience</h3>
       
       <div class="experience-wrapper">
+        <div class="company-wrapper clearfix">
+      		<div class="experience-title">Xpress Technologies</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+          <div class="time">June 2021 - Present</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+      	</div>
+        
+        <div class="job-wrapper clearfix">
+        	<div class="experience-title">Senior Machine Learing Engineer </div> <!-- JOB TITLE  -->
+          <div class="company-description">
+          	<p>Predicting the pricing of carrying various loads using machine learning to help U.S. Xpress revolutionize the trucking industry by streamlining the process between the shippers and carriers. 
+            <br>
+            <span class="boldwhite">Technologies:</span> Python
+            </p>  <!-- JOB DESCRIPTION  -->
+          </div>
+        </div>
+
       	<div class="company-wrapper clearfix">
       		<div class="experience-title">Citizens Bank</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
           <div class="time">Sept 2019 - Present</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
@@ -95,7 +110,7 @@
       </div>
 
       <div class="company-wrapper clearfix">
-        <div class="experience-title">Evantrium</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+        <div class="experience-title">Evantrium LLC</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
         <div class="time">June 2013 - December 2015</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
     </div> 
   
@@ -114,7 +129,7 @@
       <h3 class="experience-title">Education</h3>
       <div class="company-wrapper clearfix">
         <div class="experience-title">Arizona State University</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-    <div class="time">Fall 2016 - Present<br><span class="boldwhite">GPA: 3.9</span></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+    <div class="time">Spring 2021<br><span class="boldwhite">GPA: 3.9</span></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
     </div> 
   
    <div class="job-wrapper clearfix">
