--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  </div>
       <div class="name-wrapper">
         <h1>Wasif Bokhari (PhD)</h1><!-- YOUR NAME AND LAST NAME  -->
-        <h3>Senior Machine Learing Engineer</h3><!-- YOUR NAME AND LAST NAME  -->
+        <h3>Senior Machine Learning Engineer</h3><!-- YOUR NAME AND LAST NAME  -->
       </div>
       <div class="clearfix"></div>
       <div class="contact-info clearfix">
@@ -57,7 +57,7 @@
       	</div>
         
         <div class="job-wrapper clearfix">
-        	<div class="experience-title">Senior Machine Learing Engineer </div> <!-- JOB TITLE  -->
+        	<div class="experience-title">Senior Machine Learning Engineer </div> <!-- JOB TITLE  -->
           <div class="company-description">
           	<p>Predicting the pricing of carrying various loads using machine learning to help U.S. Xpress revolutionize the trucking industry by streamlining the process between the shippers and carriers. 
             <br>
